[gd_scene load_steps=3 format=3 uid="uid://dq7g2j32yuejn"]

[ext_resource type="Script" path="res://Scenes/hud.gd" id="1_0lyf6"]
[ext_resource type="FontFile" uid="uid://dq2xslcmyvkwq" path="res://Assets/fonts/Xolonium-Regular.ttf" id="1_5u1va"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0lyf6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_5u1va")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverMessageTimer" type="Timer" parent="Control"]
wait_time = 2.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 120.0
offset_right = 168.0
offset_bottom = 272.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="PanelColor" type="ColorRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.482353, 0.482353, 0.482353, 0.384314)

[node name="PanelMessage" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5u1va")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="Control/Panel"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Control/GameOverMessageTimer" to="." method="_on_game_over_message_timer_timeout"]
[connection signal="timeout" from="Control/Panel/MessageTimer" to="." method="_on_message_timer_timeout"]
